Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- The translations for the message "description_logout_success" had been lost
  for the fr, en and es locales.
- Made the Subjects be outputted sorted.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 