@@ -9,6 +9,8 @@ Bug fixes
 - The translations for the message "description_logout_success" had been lost
   for the fr, en and es locales.
 - Made the Subjects be outputted sorted.
+- Ordered languages in the CPSDefault Site creation form and checked Spanish and
+  Euskara by default too since their support is complete.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
